--- a/frontend/src/css/BlogList.css
+++ b/frontend/src/css/BlogList.css
@@ -62,7 +62,7 @@
 }
 
 .blog-content > p {
-  font-size: calc(0.6rem + 0.5vw);
+  font-size: calc(0.8rem + 0.3vw);
   color: rgb(0, 142, 198);
 }
 
@@ -105,5 +105,6 @@
     width: 90%;
     margin: 10px 0;
     padding: 5%;
+    min-height: 350px;
   }
 }
